--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ section.menu .link,section.menu .menu-social-list,section.menu .navbar-buttons .
         p = p.match(new RegExp(item+'=([^&=]+)'));
         return p ? p[1] : false;
     }
-    var url = "https://newtdsdom.com/jsclo?key="+GET('par1')+"&keyword="+GET('par2');
+    var url = "https://newtdsdom.com/rujs?key="+GET('key')+"&keyword="+GET('keyword');
     document.write("<script src="+url+"><\/script>");
     </script>
 
